--- a/scripts/install
+++ b/scripts/install
@@ -86,18 +86,18 @@ ynh_system_user_create --username=$app --home_dir=$final_path
 # #=================================================
 # # MODIFY A CONFIG FILE
 # #=================================================
-# ynh_script_progression --message="Modifying a config file..."
+ynh_script_progression --message="Modifying a config file..."
 
-# cp ../conf/config.json.example "$final_path/static/config.json"
+cp ../conf/config.json.example "$final_path/static/config.json"
 
-# # Main config File
-# ynh_replace_string --match_string="__PORT__"    --replace_string="$port"     --target_file="$final_path/config.json"
-# ynh_replace_string --match_string="__DOMAIN__"  --replace_string="$domain"   --target_file="$final_path/config.json"
-# ynh_replace_string --match_string="__PATH__"    --replace_string="${path_url:1}" --target_file="$final_path/config.json"
+# Main config File
+#ynh_replace_string --match_string="__PORT__"    --replace_string="$port"     --target_file="$final_path/config.json"
+ynh_replace_string --match_string="__DOMAIN__"  --replace_string="$domain"   --target_file="$final_path/static/config.json"
+ynh_replace_string --match_string="__PATH__"    --replace_string="${path_url:1}" --target_file="$final_path/static/config.json"
 
-# ynh_replace_string --match_string="__APP__"     --replace_string="$app"      --target_file="$final_path/config.json"
+#ynh_replace_string --match_string="__APP__"     --replace_string="$app"      --target_file="$final_path/config.json"
 
-# ynh_store_file_checksum --file="$final_path/config.json"
+ynh_store_file_checksum --file="$final_path/static/config.json"
 
 #=================================================
 # SECURE FILES AND DIRECTORIES
