--- a/scripts/install
+++ b/scripts/install
@@ -103,11 +103,11 @@ ynh_script_progression --message="Modifying a config file..."
 cp ../conf/config.json.example "$final_path/static/config.json"
 
 # Main config File
-ynh_replace_string --match_string="__DOMAIN__"  --replace_string="$domain"   --target_file="$final_path/config.json"
+ynh_replace_string --match_string="__DOMAIN__" --replace_string="$domain" --target_file="$final_path/static/config.json"
 
 cp ../conf/config.conf.example "$webircgateway_path/config.conf"
 
-ynh_store_file_checksum --file="$final_path/config.json"
+ynh_store_file_checksum --file="$final_path/static/config.json"
 ynh_store_file_checksum --file="$webircgateway_path/config.conf"
 
 #=================================================
