--- a/scripts/install
+++ b/scripts/install
@@ -121,7 +121,7 @@ chown -R $app:$app $final_path
 #=================================================
 # INTEGRATE SERVICE IN YUNOHOST
 #=================================================
-ynh_script_progression --message="Integrating service in YunoHost..." --time --weight=1
+ynh_script_progression --message="Integrating service in YunoHost..." --weight=1
 
 yunohost service add $app --description "A short description of the app" --log "/var/log/$app/$app.log"
 
