--- a/scripts/install
+++ b/scripts/install
@@ -40,6 +40,7 @@ test ! -e "$final_path" || ynh_die --message="This path already contains a folde
 # Register (book) web path
 ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 
+mkdir -p /var/www/webircgateway
 webircgateway_path=/var/www/webircgateway
 
 #=================================================
