--- a/scripts/install
+++ b/scripts/install
@@ -118,6 +118,7 @@ ynh_script_progression --message="Securing files and directories..."
 
 # Set permissions to app files
 chown -R $app:$app $final_path
+chown -R www-data:www-data $webircgateway_path
 
 #=================================================
 # INTEGRATE SERVICE IN YUNOHOST
