--- a/scripts/install
+++ b/scripts/install
@@ -48,11 +48,11 @@ ynh_app_setting_set --app=$app --key=path --value=$path_url
 #=================================================
 # FIND AND OPEN A PORT
 #=================================================
-# ynh_script_progression --message="Finding an available port..." --weight=1
+ynh_script_progression --message="Finding an available port..." --weight=1
 
-# # Find an available port
-# port=$(ynh_find_port --port=7778)
-# ynh_app_setting_set --app=$app --key=port --value=$port
+# Find an available port
+port=$(ynh_find_port --port=7778)
+ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
 # CREATE DEDICATED USER
