--- a/scripts/install
+++ b/scripts/install
@@ -21,7 +21,7 @@ ynh_abort_if_errors
 #=================================================
 
 domain=$YNH_APP_ARG_DOMAIN
-path_url=$YNH_APP_ARG_PATH
+path_url="/"
 is_public=$YNH_APP_ARG_IS_PUBLIC
 
 app=$YNH_APP_INSTANCE_NAME
@@ -34,8 +34,8 @@ ynh_script_progression --message="Validating installation parameters..." --weigh
 # final_path=/var/www/$app
 # test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
 
-# # Register (book) web path
-# ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
+# Register (book) web path
+ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 
 #=================================================
 # STORE SETTINGS FROM MANIFEST
