--- a/scripts/install
+++ b/scripts/install
@@ -22,7 +22,6 @@ ynh_abort_if_errors
 
 domain=$YNH_APP_ARG_DOMAIN
 path_url="/"
-is_public=$YNH_APP_ARG_IS_PUBLIC
 
 app=$YNH_APP_INSTANCE_NAME
 
@@ -30,9 +29,6 @@ app=$YNH_APP_INSTANCE_NAME
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
 ynh_script_progression --message="Validating installation parameters..." --weight=1
-
-# final_path=/var/www/$app
-# test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
 
 # Register (book) web path
 ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
@@ -55,25 +51,9 @@ port=$(ynh_find_port --port=7778)
 ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
-# CREATE DEDICATED USER
-#=================================================
-ynh_script_progression --message="Configuring system user..." --weight=3
-
-# Create a system user
-#ynh_system_user_create --username=$app --home_dir=$final_path
-
-#=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
-# ynh_script_progression --message="Setting up source files..." --weight=2
-
-# ynh_app_setting_set --app=$app --key=final_path --value=$final_path
-# # Download, check integrity, uncompress and patch the source from app.src
-# #ynh_setup_source --dest_dir="$final_path"
-
-# chmod 750 "$final_path"
-# chmod -R o-rwx "$final_path"
-# chown -R $app:www-data "$final_path"
+ynh_script_progression --message="Setting up source files..." --weight=2
 
 tempdir="$(mktemp -d)"
 
@@ -90,27 +70,6 @@ ynh_script_progression --message="Configuring NGINX web server..." --weight=2
 ynh_add_nginx_config
 
 #=================================================
-# SETUP SYSTEMD
-#=================================================
-#ynh_script_progression --message="Configuring a systemd service..." --weight=1
-
-# Create a dedicated systemd config
-#ynh_add_systemd_config
-
-# #=================================================
-# # MODIFY A CONFIG FILE
-# #=================================================
-# ynh_script_progression --message="Modifying a config file..."
-
-# ynh_add_config --template="../conf/config.json.example" --destination="$final_path/static/config.json"
-# ynh_add_config --template="../conf/config.conf.example" --destination="$webircgateway_path/config.conf"
-
-chmod 600 "$final_path/static/config.json"
-chmod 600 "$webircgateway_path/config.conf"
-chown $app:$app "$final_path/static/config.json"
-chown $app:$app "$webircgateway_path/config.conf"
-
-#=================================================
 # INTEGRATE SERVICE IN YUNOHOST
 #=================================================
 ynh_script_progression --message="Integrating service in YunoHost..." --weight=1
@@ -124,17 +83,6 @@ ynh_script_progression --message="Starting a systemd service..." --weight=1
 
 # Start a systemd service
 ynh_systemd_action --service_name=$app --action="start" --log_path="systemd"
-
-#=================================================
-# SETUP SSOWAT
-#=================================================
-ynh_script_progression --message="Configuring permissions..." --weight=1
-
-# Make app public if necessary or protect it
-if [ $is_public -eq 1 ]
-then
-	ynh_permission_update --permission="main" --add="visitors"
-fi
 
 #=================================================
 # RELOAD NGINX
