--- a/scripts/install
+++ b/scripts/install
@@ -21,7 +21,7 @@ ynh_abort_if_errors
 #=================================================
 
 domain=$YNH_APP_ARG_DOMAIN
-path_url=$YNH_APP_ARG_PATH
+path_url="/"
 
 app=$YNH_APP_INSTANCE_NAME
 
