--- a/scripts/install
+++ b/scripts/install
@@ -95,7 +95,7 @@ yunohost service add $app --description="Versatile web based messenger using IRC
 ynh_script_progression --message="Starting a systemd service..." --weight=1
 
 # Start a systemd service
-ynh_systemd_action --service_name=$app --action="start" --log_path="systemd"
+ynh_systemd_action --service_name=$app --action="restart" --log_path="systemd"
 
 #=================================================
 # RELOAD NGINX
