--- a/scripts/install
+++ b/scripts/install
@@ -57,7 +57,7 @@ ynh_script_progression --message="Setting up source files..." --weight=2
 
 tempdir="$(mktemp -d)"
 ynh_setup_source --dest_dir=$tempdir --source_id=app
-ynh_exec_warn_less dpkg -i $tempdir/kiwiirc_20.05.24.1-1_amd64.deb
+ynh_exec_warn_less dpkg -i $tempdir/kiwiirc.deb
 
 #=================================================
 # ADD A CONFIGURATION
